--- a/zr_bio.html
+++ b/zr_bio.html
@@ -3,17 +3,19 @@
  <head>
     <body>
         <h1>Student Bio</h1>
-        <div><
+        <div>
         <h2>Zack Robin</h2>
         <img src ="Explorer.jpg" style = "height: 200px; width: 200px;">
         </div>
         <p>Hello, my name is Zack Robin. I'm a 30 year old musician that specializes in guitar and music production. I have been playing guitar for 18 years and have my own music production business. I recieved a bachelors degree music production and masters degree in business at Full Sail University. It was at Full Sail that I developed a profound interest in coding and set the stage for my current journey at UCF's coding bootcamp.</p>
+        <div>
         <h2>Contact Info</h2>
             <ul>
-                <li><strong>Email:</strong>zrobin88@gmail.com</li>
-                <li><strong>Github:</strong>zrobin88</li>
-                <li><strong>Portfolio:</strong>Coming Soon</li>
+                <li><strong> Email:</strong><a href ="mailto:zrobin88@gmail.com">Email Me</a></li>
+                <li><strong> Github:</strong><a href ="https://github.com/zrobin88">zrobin88</a></li>
+                <li><strong> Portfolio:</strong>Coming Soon</li>
             </ul>
+        </div>
     </body>
  </head>
 </html>
